--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@handlebars/allow-prototype-access": "^1.0.3",
     "@sendgrid/mail": "^7.4.2",
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^2.4.1",
     "csurf": "^1.11.0",
@@ -23,6 +24,7 @@
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
     "express-validator": "^6.10.0",
+    "helmet": "^4.4.1",
     "mongoose": "^5.11.8",
     "multer": "^1.4.2",
     "uuid": "^8.3.2"
